fix: close Copilot privacy and JVM gaps
Handle attribution case, country-code phone numbers and serialized IDIR names without weakening identifier boundaries. Reject jstat JVM forwarding through the read-only command interface.

Add builder, MCP and HTTP regressions demonstrating that non-multiline ECMAScript validators already reject trailing terminators. Record the false-positive disposition and full validation evidence.